@@ -5,6 +5,7 @@ plugins {
     `maven-publish`
     `java-library`
     eclipse
+    id("net.smoofyuniverse.jacoco-offline") version "1.0.0"
     id("org.spongepowered.gradle.vanilla")
     id("com.github.johnrengelman.shadow")
     id("org.spongepowered.gradle.sponge.dev") apply false // for version json generation
@@ -15,6 +16,7 @@ plugins {
 }
 
 val commonProject = project
+val vanillaProject = project(":SpongeVanilla")
 val apiVersion: String by project
 val minecraftVersion: String by project
 val recommendedVersion: String by project
@@ -27,6 +29,7 @@ val apiPluginSpiVersion: String by project
 val asmVersion: String by project
 val log4jVersion: String by project
 val modlauncherVersion: String by project
+val java9hacksVersion: String by project
 val mixinVersion: String by project
 val junitVersion: String by project
 val mockitoVersion: String by project
@@ -45,6 +48,9 @@ val commonManifest = java.manifest {
     System.getenv()["GIT_COMMIT"]?.apply { attributes("Git-Commit" to this) }
     System.getenv()["GIT_BRANCH"]?.apply { attributes("Git-Branch" to this) }
 }
+
+val superclassConfigs = spongeImpl.getNamedConfigurations("superClassChanges")
+val mixinConfigs = spongeImpl.mixinConfigurations
 
 tasks {
     jar {
@@ -73,6 +79,33 @@ tasks {
 
     test {
         useJUnitPlatform()
+
+        if (JavaVersion.current().isJava11Compatible) {
+            jvmArgs(
+                    "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+                    "--add-opens=java.base/java.util.jar=ALL-UNNAMED"
+            )
+        }
+
+        jvmArgs("-javaagent:${mlpatcherConfig.get().resolvedConfiguration.files.firstOrNull()}")
+        maxHeapSize = "1G"
+
+        val launcherArgs = mixinConfigs.map { "--mixin.config $it" } + superclassConfigs.map { "--superclass_change.config $it" }
+        systemProperty("sponge.test.launcherArguments", launcherArgs.joinToString(" "))
+
+        extensions.configure(net.smoofyuniverse.testing.jacoco.plugins.JacocoTaskExtension::class) {
+            offline.set(true)
+        }
+        finalizedBy(jacocoTestReport)
+    }
+
+    jacocoTestOfflineInstrumentation {
+        sourceSets(applaunch.get(), launch.get())
+    }
+
+    jacocoTestReport {
+        sourceSets(applaunch.get(), launch.get())
+        dependsOn(test)
     }
 
     check {
@@ -101,6 +134,8 @@ val mixinsConfig by configurations.register("mixins") {
     extendsFrom(applaunchConfig)
     extendsFrom(launchConfig)
 }
+
+val mlpatcherConfig = configurations.register("mlpatcher")
 
 // create the sourcesets
 val main by sourceSets
@@ -143,6 +178,22 @@ val mixins by sourceSets.registering {
     configurations.named(implementationConfigurationName) {
         extendsFrom(mixinsConfig)
     }
+}
+
+val test by sourceSets.named("test") {
+    spongeImpl.applyNamedDependencyOnOutput(project, mixins.get(), this, project, this.implementationConfigurationName)
+    configurations.named(implementationConfigurationName) {
+        extendsFrom(mlpatcherConfig.get())
+        extendsFrom(applaunchConfig)
+        extendsFrom(launchConfig)
+    }
+}
+vanillaProject.afterEvaluate {
+    val vanillaAppLaunchBase = vanillaProject.sourceSets.named("applaunch-base")
+    val vanillaLaunch = vanillaProject.sourceSets.named("launch")
+
+    spongeImpl.applyNamedDependencyOnOutput(vanillaProject, vanillaAppLaunchBase.get(), test, commonProject, test.implementationConfigurationName)
+    spongeImpl.applyNamedDependencyOnOutput(vanillaProject, vanillaLaunch.get(), test, commonProject, test.implementationConfigurationName)
 }
 
 dependencies {
@@ -203,6 +254,8 @@ dependencies {
     add(mixins.get().implementationConfigurationName, "org.spongepowered:spongeapi:$apiVersion")
 
     // Tests
+    mlpatcherConfig.name(project(":modlauncher-patcher"))
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testImplementation("org.junit.jupiter:junit-jupiter-params:$junitVersion")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
@@ -210,6 +263,17 @@ dependencies {
     testImplementation("org.mockito:mockito-core:$mockitoVersion")
     testImplementation("org.mockito:mockito-junit-jupiter:$mockitoVersion")
     testImplementation("org.mockito:mockito-inline:$mockitoVersion")
+
+    testImplementation("org.spongepowered:modlauncher-injector-junit:1.0.0")
+    testImplementation("cpw.mods:modlauncher:$modlauncherVersion") {
+        exclude(group = "org.apache.logging.log4j")
+        exclude(group = "net.sf.jopt-simple") // uses a newer version than MC
+    }
+    testRuntimeOnly("cpw.mods:grossjava9hacks:$java9hacksVersion") {
+        exclude(group = "org.apache.logging.log4j")
+    }
+    testRuntimeOnly(project(":modlauncher-transformers"))
+    testRuntimeOnly("org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion")
 }
 
 val organization: String by project
